<resources>
    <string name="app_name">My Movies</string>
    <string name="small_movie_poster">Small movie poster</string>
    <string name="most_popular">Most Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="title">Title:</string>
    <string name="original_title">Original title:</string>
    <string name="rating">Rating:</string>
    <string name="release_date">Release date:</string>
    <string name="description">Description:</string>
    <string name="added_to_favorite">Added to favorite</string>
    <string name="deleted_from_favorite">Deleted from favorite</string>
    <string name="main">Main</string>
    <string name="favorite">Favorite</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="big_poster">Big poster</string>
    <string name="add_to_favorite">Add to favorite</string>
</resources>